--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+.active {
+  border: 3px solid #282c34;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
